# hydrodm

./: README.md  pyproject.toml
hydrodm/: cli.py  train.py
tests/: test_train.py
